// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <div
    className="MuiTypography-root-98 MuiTypography-title-104 MuiTypography-gutterBottom-116"
  >
    $19.99
  </div>
  <p
    className="MuiTypography-root-98 MuiTypography-body1-107"
  >
    Vendor
  </p>
  <p
    className="MuiTypography-root-98 MuiTypography-body1-107"
  >
    Description
  </p>
</div>
`;

exports[`snapshot with description only 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <p
    className="MuiTypography-root-98 MuiTypography-body1-107"
  >
    Description
  </p>
</div>
`;

exports[`snapshot with no props 1`] = `null`;

exports[`snapshot with price and description 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <div
    className="MuiTypography-root-98 MuiTypography-title-104 MuiTypography-gutterBottom-116"
  >
    $19.99
  </div>
  <p
    className="MuiTypography-root-98 MuiTypography-body1-107"
  >
    Description
  </p>
</div>
`;

exports[`snapshot with price only 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <div
    className="MuiTypography-root-98 MuiTypography-title-104 MuiTypography-gutterBottom-116"
  >
    $19.99
  </div>
</div>
`;

exports[`snapshot with vendor only 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <p
    className="MuiTypography-root-98 MuiTypography-body1-107"
  >
    Vendor
  </p>
</div>
`;
